feat: 优化 SSH 日志获取
