# cmd/server/docs/swagger.yaml
@@ -2152,19 +2152,6 @@ definitions:
       totalCount:
         type: integer
     type: object
-  dto.SSHLogAnalysis:
-    properties:
-      address:
-        type: string
-      area:
-        type: string
-      failedCount:
-        type: integer
-      status:
-        type: string
-      successfulCount:
-        type: integer
-    type: object
   dto.SSHUpdate:
     properties:
       key:
@@ -2201,22 +2188,6 @@ definitions:
     required:
     - ssl
     - sslType
-    type: object
-  dto.SearchForAnalysis:
-    properties:
-      orderBy:
-        enum:
-        - Success
-        - Failed
-        type: string
-      page:
-        type: integer
-      pageSize:
-        type: integer
-    required:
-    - orderBy
-    - page
-    - pageSize
     type: object
   dto.SearchForTree:
     properties:
@@ -3300,6 +3271,8 @@ definitions:
     type: object
   request.FileWget:
     properties:
+      ignoreCertificate:
+        type: boolean
       name:
         type: string
       path:
@@ -8964,30 +8937,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Load host SSH logs
-      tags:
-      - SSH
-  /host/ssh/log/analysis:
-    post:
-      consumes:
-      - application/json
-      description: 分析 SSH 登录日志
-      parameters:
-      - description: request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.SearchForAnalysis'
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/dto.SSHLogAnalysis'
-            type: array
-      security:
-      - ApiKeyAuth: []
-      summary: Analysis host SSH logs
       tags:
       - SSH
   /host/ssh/operate:
